Fix: video call controls jumping

--- a/client/src/AgoraManager/volumeControl.css
+++ b/client/src/AgoraManager/volumeControl.css
@@ -5,6 +5,7 @@
   max-width: 100%;
   gap: .5vw;
   padding-top: .5vw;
+  margin-top: auto;
 }
 
 #toggle-mute {
